# XYZ

./: .gitignore  CMakeLists.txt  README.md
agents/: CMakeLists.txt
agents/src/: CMakeLists.txt  agent_manager.cpp  agent_manager.h  ai_processor.cpp  ai_processor.h  base_agent.cpp  base_agent.h  main.cpp  utils.cpp  utils.h
app/: CMakeLists.txt
app/examples/: CMakeLists.txt  example_1.cpp  example_2.cpp
app/src/: CMakeLists.txt  app_main.cpp  app_manager.cpp  app_manager.h
cli/: CMakeLists.txt
cli/src/: CMakeLists.txt  cli_main.cpp  cli_manager.cpp  cli_manager.h
include/: agent.hpp  app.hpp  cli.hpp  model.hpp  utils.hpp
models/: CMakeLists.txt
models/src/: CMakeLists.txt  model.cpp  model.h  model_loader.cpp  model_loader.h
tests/: CMakeLists.txt  test_agents.cpp  test_models.cpp  test_utils.cpp
utils/: CMakeLists.txt  config_loader.cpp  config_loader.h  constants.h  logging.cpp  logging.h
